@@ -54,7 +54,6 @@ public:
 
     virtual QWidget *createEditor( QWidget *parent, const QStyleOptionViewItem &option, const QModelIndex &index ) const;
     virtual void setModelData ( QWidget *editor, QAbstractItemModel *model, const QModelIndex &index ) const;
-
 };
 
 
